force-app/main/default/objects/Evaluated_KPI__c/Evaluated_KPI__c.object-meta.xml
<CustomObject>
    <label>Evaluated KPI</label>
    <nameField>
        <label>Evaluated KPI Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Evaluated KPIs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>