force-app/main/default/objects/Evaluated_KPI__c/fields/KPI__c.field-meta.xml
<CustomField>
    <fullName>KPI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>KPI</label>
    <referenceTo>KPI__c</referenceTo>
    <relationshipLabel>Evaluated KPIs</relationshipLabel>
    <relationshipName>Evaluated_KPIs</relationshipName>
    <type>Lookup</type>
</CustomField>