force-app/main/default/objects/Evaluated_KPI__c/fields/Review__c.field-meta.xml
<CustomField>
    <fullName>Review__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Review</label>
    <referenceTo>Review__c</referenceTo>
    <relationshipLabel>Evaluated KPIs</relationshipLabel>
    <relationshipName>Evaluated_KPIs</relationshipName>
    <type>Lookup</type>
</CustomField>